--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       </div>
     </header>
     <section class="container">
-      <section class="items"></section>
+      <section class="items">
+        <div class="loading">carregando...</div>
+      </section>
       <section class="cart">
         <ol class="cart__items"></ol>
         <p class="total-price">Subtotal: 0</p>
