--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <p class="total-price">Subtotal: 0</p>
+        <p class="total-price">0</p>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
